# plinth-telemetry

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  TASKS.md  build.gradle.kts  package.json  settings.gradle.kts
crates/plinth-core/: Cargo.toml
crates/plinth-core/src/: beacon.rs  config.rs  event.rs  ffi.rs  jni.rs  lib.rs  metrics.rs  session.rs  state.rs  wasm.rs
dev/: server.ts
docs/prd/: android-media3.md  heartbeat-inactivity-timeout.md  optimized-beacon-size  optimized-beacon-size.md  rebuffer-tracking.md  rendition-tracking.md  seek-tracking.md  shaka-integration.md  viewership-metrics.md
docs/reference/: beacon-payload.md  quickstart-dashjs.md
docs/tdd/: dashjs-integration.md  heartbeat-inactivity-timeout.md  rebuffer-tracking.md  seek-tracking.md  shaka-integration.md  viewership-metrics.md
gradle/: libs.versions.toml
notes/features/: heartbeat-inactivity-timeout.md  rebuffer-tracking.md  seek-tracking.md
samples/macos-demo/: Package.swift
samples/macos-demo/.build/index-build/: build.db  debug.yaml
samples/web/: dashjs-main.ts  dashjs.html  demo-shell.ts  demo.html  hlsjs-main.ts  hlsjs.html  home.html  server.ts  shaka-main.ts  shaka.html
scripts/: dev-web.sh  setup-android.sh
